<resources>
    <string name="app_name">Food Truck</string>
    <string name="truck_owner_activity">Food Truck - Owner</string>
    <string name="customer_activity">Food Truck - Customer</string>
    <string name="customer">Customer</string>
    <string name="truck_owner">Truck Owner</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="truck_dashboard">Truck Dashboard</string>
    <string name="open_and_update">Open/Update</string>
    <string name="edit_info">Edit/Info</string>
    <string name="close">Close</string>
    <string name="enter_address">Enter Address</string>
    <string name="add">Add</string>
    <string name="edit">Edit Info</string>
    <string name="truck_name">Truck Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="update_bio">Update Bio</string>
    <string name="update">Update</string>
    <string name="user_register">Customer Registration</string>
    <string name="find">Find Food Truck</string>
    <string name="review">Review</string>
    <string name="title_activity_maps">Map</string>
</resources>
