<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.brandon.myfoodtruckapplication.TruckEdit"
    android:background="@drawable/color_purple"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="39dp" />

        <TextView
            android:id="@+id/TruckName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:hint="@string/truck_name"
            android:textColor="@android:color/black"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/editTextTruckName"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/OwnerFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:hint="@string/first_name"
            android:textColor="@android:color/black"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/editTextOwnerFirstName"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/OwnerLast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:hint="@string/last_name"
            android:textColor="@android:color/black"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/editTextOwnerLastName"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/OwnerPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:hint="@string/phone_number"
            android:textColor="@android:color/black"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/editTextOwnerPhoneNumber"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:hint="@string/email"
            android:textColor="@android:color/black"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_bio"
            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="133dp"
            tools:layout_editor_absoluteY="406dp"
            android:background="@android:drawable/dialog_holo_light_frame"

            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>