<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.brandon.myfoodtruckapplication.TruckDashboard"
    android:background="@drawable/color_purple"
    >

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:orientation="horizontal"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="81dp"
        android:layout_marginEnd="82dp"
        app:layout_constraintRight_toRightOf="@+id/linearLayout5"
        android:layout_marginTop="113dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.478">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/truck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="138dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="36dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/truck_dashboard"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="206dp"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="21dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:id="@+id/linearLayout5">

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:text="@string/open_and_update"
            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="16dp"

            tools:layout_editor_absoluteY="140dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_info"
            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="251dp"
            tools:layout_editor_absoluteY="140dp"
            android:background="@android:drawable/dialog_holo_light_frame"

            />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:text="@string/close"
            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="127dp"
            tools:layout_editor_absoluteY="231dp"
            android:background="@android:drawable/dialog_holo_light_frame"

            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>