<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:weightSum="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="81dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout4">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/food" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="113dp"
        android:orientation="horizontal"
        android:weightSum="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="28dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/linearLayout4">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:fontFamily="serif"
            android:text="@string/welcome"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="480dp"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="310dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="1">

        <Button
            android:id="@+id/truck_owner_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/truck_owner"
            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="131dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            />

        <Button
            android:id="@+id/customer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer"
            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="241dp"
            tools:layout_editor_absoluteY="131dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>